[gd_scene load_steps=13 format=3 uid="uid://bn84suksmdqdn"]

[ext_resource type="Script" path="res://scenes/levels/scripts/level_8.gd" id="1_ex248"]
[ext_resource type="TileSet" uid="uid://bph8khkfunyrp" path="res://scenes/levels/resources/tiles.tres" id="2_60p4d"]
[ext_resource type="PackedScene" uid="uid://b6t1fmlc7s4og" path="res://scenes/player/player.tscn" id="3_7sd3a"]
[ext_resource type="PackedScene" uid="uid://ckl0n7ot1qvna" path="res://scenes/utils/multitarget_camera.tscn" id="3_xwh5x"]
[ext_resource type="PackedScene" uid="uid://cvqxnue1nuibu" path="res://scenes/objects/removable_platform.tscn" id="5_lrvf0"]
[ext_resource type="PackedScene" uid="uid://cxydg1uj28ux8" path="res://scenes/objects/block.tscn" id="6_dujk2"]
[ext_resource type="PackedScene" uid="uid://ca3ykvqmarsvn" path="res://scenes/objects/button.tscn" id="7_8i2yp"]
[ext_resource type="PackedScene" uid="uid://b60pklhxaq0wd" path="res://scenes/objects/movable_platform.tscn" id="8_3pf27"]
[ext_resource type="PackedScene" uid="uid://dyb0fht7d2j5b" path="res://scenes/objects/checkpoint.tscn" id="9_o812s"]
[ext_resource type="PackedScene" uid="uid://dytd5g5foi3ka" path="res://scenes/objects/player_gate.tscn" id="10_qlt0k"]
[ext_resource type="PackedScene" uid="uid://bxqg0b4ysehvc" path="res://scenes/objects/death_area.tscn" id="11_373na"]
[ext_resource type="PackedScene" uid="uid://jqpxcgo7u3dk" path="res://scenes/objects/goal.tscn" id="12_me00f"]

[node name="Level_8" type="Node2D"]
script = ExtResource("1_ex248")
next_level = "9"

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource("2_60p4d")
format = 2
layer_0/tile_data = PackedInt32Array(196615, 65537, 1, 131079, 65537, 1, 65543, 1, 65538, 196614, 65537, 1, 131078, 65537, 1, 65542, 65537, 1, 196613, 65537, 1, 131077, 65537, 1, 65541, 65537, 1, 196612, 65537, 1, 131076, 65537, 1, 65540, 131073, 65538, 196611, 65537, 1, 131075, 65537, 1, 65539, 65537, 0, 196610, 65537, 1, 131074, 65537, 1, 65538, 65537, 0, 196609, 65537, 1, 131073, 65537, 1, 65537, 65537, 0, 196608, 65537, 1, 131072, 65537, 1, 65536, 65537, 0, 262143, 65537, 1, 196607, 65537, 1, 131071, 65537, 0, 262142, 65537, 1, 196606, 65537, 1, 131070, 65537, 0, 262141, 1, 1, 196605, 1, 1, 131069, 1, 0, 7, 131073, 1, -65529, 131073, 1, -131065, 131073, 1, -196601, 131073, 1, 6, 65537, 1, -65530, 65537, 1, -131066, 65537, 1, -196602, 65537, 1, 5, 65537, 1, -65531, 65537, 1, -131067, 65537, 1, -196603, 65537, 1, 4, 1, 1, -65532, 1, 1, -131068, 1, 1, -196604, 1, 1, 262151, 65537, 2, 262150, 65537, 2, 262149, 65537, 2, 262148, 65537, 2, 262147, 65537, 2, 262146, 65537, 2, 262145, 65537, 2, 262144, 65537, 2, 327679, 65537, 2, 327678, 65537, 2, 327677, 1, 2, -196612, 131073, 1, -262148, 131073, 0, -196613, 65537, 1, -262149, 65537, 0, -196614, 65537, 1, -262150, 65537, 0, -196615, 65537, 1, -262151, 1, 65538, -327687, 131073, 1, -393223, 131073, 0, -196616, 65537, 1, -262152, 65537, 1, -327688, 65537, 1, -393224, 65537, 0, -196617, 65537, 1, -262153, 65537, 1, -327689, 65537, 1, -393225, 65537, 0, -196618, 65537, 1, -262154, 65537, 1, -327690, 65537, 1, -393226, 65537, 0, -196619, 65537, 1, -262155, 65537, 1, -327691, 65537, 1, -393227, 65537, 0, -196620, 1, 1, -262156, 1, 1, -327692, 1, 1, -393228, 1, 0, 327671, 65537, 1, 262135, 65537, 1, 196599, 65537, 1, 131063, 65537, 1, 65527, 65537, 1, -9, 65537, 1, -65545, 65537, 1, -131081, 65537, 1, 327670, 65537, 1, 262134, 65537, 1, 196598, 65537, 1, 131062, 65537, 1, 65526, 65537, 1, -10, 65537, 1, -65546, 65537, 1, -131082, 65537, 1, 327669, 65537, 1, 262133, 65537, 1, 196597, 65537, 1, 131061, 65537, 1, 65525, 65537, 1, -11, 65537, 1, -65547, 65537, 1, -131083, 65537, 1, 327668, 131073, 65536, 262132, 65537, 1, 196596, 65537, 1, 131060, 131073, 65538, 65524, 1, 1, -12, 1, 1, -65548, 1, 1, -131084, 1, 1, 720887, 65537, 2, 655351, 65537, 1, 589815, 65537, 1, 524279, 65537, 1, 458743, 65537, 1, 393207, 65537, 1, 720886, 65537, 2, 655350, 65537, 1, 589814, 65537, 1, 524278, 65537, 1, 458742, 65537, 1, 393206, 65537, 1, 720885, 65537, 2, 655349, 65537, 1, 589813, 65537, 1, 524277, 65537, 1, 458741, 65537, 1, 393205, 65537, 1, 720884, 1, 2, 655348, 1, 1, 589812, 1, 1, 524276, 1, 1, 458740, 1, 1, 393204, 1, 1, 655367, 131073, 2, 589831, 131073, 1, 524295, 131073, 1, 458759, 131073, 0, 655366, 65537, 2, 589830, 65537, 1, 524294, 65537, 1, 458758, 65537, 0, 655365, 65537, 2, 589829, 65537, 1, 524293, 65537, 1, 458757, 65537, 0, 655364, 65537, 2, 589828, 65537, 1, 524292, 65537, 1, 458756, 65537, 0, 655363, 65537, 2, 589827, 65537, 1, 524291, 65537, 1, 458755, 65537, 0, 655362, 65537, 2, 589826, 65537, 1, 524290, 65537, 1, 458754, 65537, 0, 720892, 65537, 2, 655356, 65537, 1, 589820, 65537, 1, 524284, 65537, 0, 720891, 65537, 2, 655355, 65537, 1, 589819, 65537, 1, 524283, 65537, 0, 720890, 65537, 2, 655354, 65537, 1, 589818, 65537, 1, 524282, 1, 65538, 720889, 65537, 2, 655353, 65537, 1, 589817, 65537, 1, 524281, 65537, 1, 720888, 65537, 2, 655352, 65537, 1, 589816, 65537, 1, 524280, 65537, 1, -131076, 131073, 1, -131077, 65537, 1, -131078, 65537, 1, -131079, 65537, 1, -131080, 65537, 1, -65540, 131073, 2, -65541, 65537, 2, -65542, 1, 65536, -65543, 65537, 1, -65544, 65537, 1, -65551, 131073, 2, -131087, 131073, 1, -196623, 131073, 1, -262159, 131073, 1, -327695, 131073, 1, -393231, 131073, 1, -458767, 131073, 1, -524303, 131073, 1, -589839, 131073, 1, -655375, 131073, 1, -720911, 131073, 0, -65552, 65537, 2, -131088, 65537, 1, -196624, 65537, 1, -262160, 65537, 1, -327696, 65537, 1, -393232, 65537, 1, -458768, 65537, 1, -524304, 65537, 1, -589840, 65537, 1, -655376, 65537, 1, -720912, 65537, 0, -65553, 65537, 2, -131089, 65537, 1, -196625, 65537, 1, -262161, 65537, 1, -327697, 65537, 1, -393233, 65537, 1, -458769, 65537, 1, -524305, 65537, 1, -589841, 65537, 1, -655377, 65537, 1, -720913, 65537, 0, -65554, 65537, 2, -131090, 65537, 1, -196626, 65537, 1, -262162, 65537, 1, -327698, 65537, 1, -393234, 65537, 1, -458770, 65537, 1, -524306, 65537, 1, -589842, 65537, 1, -655378, 65537, 1, -720914, 65537, 0, 262131, 65537, 1, 196595, 65537, 1, 131059, 65537, 0, 262130, 65537, 1, 196594, 65537, 1, 131058, 65537, 0, 262129, 65537, 1, 196593, 65537, 1, 131057, 65537, 0, 262128, 65537, 1, 196592, 65537, 1, 131056, 65537, 0, 262127, 65537, 1, 196591, 65537, 1, 131055, 65537, 0, 262126, 65537, 1, 196590, 65537, 1, 131054, 65537, 0, 327667, 65537, 2, 327666, 65537, 2, 327665, 65537, 2, 327664, 65537, 2, 327663, 65537, 2, 327662, 65537, 2, -262137, 131073, 1, -327673, 131073, 1, -393209, 131073, 1, -458745, 131073, 1, -262138, 65537, 1, -327674, 65537, 1, -393210, 65537, 1, -458746, 65537, 1, -262139, 65537, 1, -327675, 65537, 1, -393211, 65537, 1, -458747, 65537, 1, -262140, 1, 1, -327676, 1, 1, -393212, 1, 1, -458748, 1, 1, -524281, 131073, 1, -589817, 131073, 1, -524282, 65537, 1, -589818, 65537, 1, -524283, 65537, 1, -589819, 65537, 1, -524284, 1, 1, -589820, 1, 1, 655361, 65537, 2, 589825, 65537, 1, 524289, 65537, 1, 458753, 65537, 0, 655360, 65537, 2, 589824, 65537, 1, 524288, 65537, 1, 458752, 65537, 0, 720895, 65537, 2, 655359, 65537, 1, 589823, 65537, 1, 524287, 65537, 0, 720894, 65537, 2, 655358, 65537, 1, 589822, 65537, 1, 524286, 65537, 0, 720893, 65537, 2, 655357, 65537, 1, 589821, 65537, 1, 524285, 65537, 0, 327661, 65537, 2, 262125, 65537, 1, 196589, 65537, 1, 131053, 1, 65538, 65517, 131073, 1, -19, 131073, 1, -65555, 1, 65536, -131091, 65537, 1, -196627, 65537, 1, -262163, 65537, 1, -327699, 65537, 1, -393235, 65537, 1, -458771, 65537, 1, -524307, 65537, 1, -589843, 65537, 1, -655379, 65537, 1, -720915, 65537, 0, 327660, 65537, 2, 262124, 65537, 1, 196588, 65537, 1, 131052, 65537, 1, 65516, 65537, 1, -20, 65537, 1, -65556, 65537, 1, -131092, 65537, 1, -196628, 65537, 1, -262164, 65537, 1, -327700, 65537, 1, -393236, 65537, 1, -458772, 65537, 1, -524308, 65537, 1, -589844, 65537, 1, -655380, 65537, 1, -720916, 65537, 0, 327659, 65537, 2, 262123, 65537, 1, 196587, 65537, 1, 131051, 65537, 1, 65515, 65537, 1, -21, 65537, 1, -65557, 65537, 1, -131093, 65537, 1, -196629, 65537, 1, -262165, 65537, 1, -327701, 65537, 1, -393237, 65537, 1, -458773, 65537, 1, -524309, 65537, 1, -589845, 65537, 1, -655381, 65537, 1, -720917, 65537, 0, 327658, 1, 2, 262122, 1, 1, 196586, 1, 1, 131050, 1, 1, 65514, 1, 1, -22, 1, 1, -65558, 1, 1, -131094, 1, 1, -196630, 1, 1, -262166, 1, 1, -327702, 1, 1, -393238, 1, 1, -458774, 1, 1, -524310, 1, 1, -589846, 1, 1, -655382, 1, 1, -720918, 1, 0, 655374, 131073, 2, 589838, 131073, 1, 524302, 131073, 1, 458766, 131073, 0, 655373, 65537, 2, 589837, 65537, 1, 524301, 65537, 1, 458765, 65537, 0, 655372, 65537, 2, 589836, 65537, 1, 524300, 65537, 1, 458764, 65537, 0, 655371, 1, 2, 589835, 1, 1, 524299, 1, 1, 458763, 1, 0, 262158, 131073, 2, 196622, 131073, 1, 131086, 131073, 1, 65550, 131073, 0, 262157, 65537, 2, 196621, 65537, 1, 131085, 65537, 1, 65549, 65537, 0, 262156, 65537, 2, 196620, 65537, 1, 131084, 65537, 1, 65548, 65537, 0, 262155, 65537, 2, 196619, 65537, 1, 131083, 65537, 1, 65547, 65537, 0, 262154, 65537, 2, 196618, 65537, 1, 131082, 65537, 1, 65546, 65537, 0, 262153, 65537, 2, 196617, 65537, 1, 131081, 65537, 1, 65545, 65537, 0, 262152, 65537, 2, 196616, 65537, 1, 131080, 65537, 1, 65544, 65537, 0, 655381, 65537, 2, 589845, 65537, 1, 524309, 65537, 1, 458773, 65537, 0, 655380, 65537, 2, 589844, 65537, 1, 524308, 65537, 1, 458772, 65537, 0, 655379, 65537, 2, 589843, 65537, 1, 524307, 65537, 1, 458771, 65537, 0, 655378, 1, 2, 589842, 1, 1, 524306, 1, 1, 458770, 1, 0, 655385, 65537, 2, 589849, 65537, 1, 524313, 65537, 1, 458777, 65537, 1, 393241, 65537, 1, 327705, 65537, 0, 655384, 65537, 2, 589848, 65537, 1, 524312, 65537, 1, 458776, 65537, 1, 393240, 65537, 1, 327704, 65537, 0, 655383, 65537, 2, 589847, 65537, 1, 524311, 65537, 1, 458775, 65537, 1, 393239, 65537, 1, 327703, 65537, 0, 655382, 65537, 2, 589846, 65537, 1, 524310, 65537, 1, 458774, 131073, 65538, 393238, 1, 1, 327702, 1, 0, 655389, 65537, 2, 589853, 65537, 1, 524317, 65537, 1, 458781, 65537, 1, 393245, 65537, 1, 327709, 65537, 1, 262173, 65537, 1, 196637, 65537, 0, 655388, 65537, 2, 589852, 65537, 1, 524316, 65537, 1, 458780, 65537, 1, 393244, 65537, 1, 327708, 65537, 1, 262172, 65537, 1, 196636, 65537, 0, 655387, 65537, 2, 589851, 65537, 1, 524315, 65537, 1, 458779, 65537, 1, 393243, 65537, 1, 327707, 65537, 1, 262171, 65537, 1, 196635, 65537, 0, 655386, 65537, 2, 589850, 65537, 1, 524314, 65537, 1, 458778, 65537, 1, 393242, 65537, 1, 327706, 131073, 65538, 262170, 1, 1, 196634, 1, 0, 655390, 65537, 2, 589854, 65537, 1, 524318, 65537, 1, 458782, 65537, 1, 393246, 65537, 1, 327710, 65537, 1, 262174, 65537, 1, 196638, 131073, 65538, -327666, 131073, 2, -393202, 1, 65536, -458738, 65537, 1, -524274, 65537, 1, -589810, 65537, 0, -262131, 131073, 2, -327667, 1, 65536, -393203, 65537, 1, -458739, 65537, 1, -524275, 65537, 1, -589811, 65537, 0, -131060, 131073, 2, -196596, 131073, 1, -262132, 1, 65536, -327668, 65537, 1, -393204, 65537, 1, -458740, 65537, 1, -524276, 65537, 1, -589812, 65537, 0, -131061, 65537, 2, -196597, 65537, 1, -262133, 65537, 1, -327669, 65537, 1, -393205, 65537, 1, -458741, 65537, 1, -524277, 65537, 1, -589813, 65537, 0, -655353, 131073, 1, -720889, 131073, 1, -786425, 131073, 1, -655354, 65537, 1, -720890, 65537, 1, -786426, 65537, 1, -655355, 65537, 1, -720891, 65537, 1, -786427, 65537, 1, -655356, 1, 1, -720892, 1, 1, -786428, 1, 1, -393186, 131073, 65536, -458722, 65537, 1, -524258, 65537, 1, -589794, 65537, 1, -393187, 65537, 2, -458723, 65537, 1, -524259, 65537, 1, -589795, 65537, 1, -393188, 65537, 2, -458724, 65537, 1, -524260, 65537, 1, -589796, 65537, 1, -393189, 65537, 2, -458725, 65537, 1, -524261, 65537, 1, -589797, 65537, 1, -393190, 65537, 2, -458726, 65537, 1, -524262, 65537, 1, -589798, 65537, 1, -393191, 65537, 2, -458727, 65537, 1, -524263, 65537, 1, -589799, 131073, 65538, -393192, 65537, 2, -458728, 65537, 1, -524264, 65537, 1, -589800, 65537, 0, -393193, 65537, 2, -458729, 65537, 1, -524265, 65537, 1, -589801, 65537, 0, -393194, 65537, 2, -458730, 65537, 1, -524266, 65537, 1, -589802, 65537, 0, -393195, 65537, 2, -458731, 65537, 1, -524267, 65537, 1, -589803, 65537, 0, -393196, 65537, 2, -458732, 65537, 1, -524268, 65537, 1, -589804, 65537, 0, -393197, 65537, 2, -458733, 65537, 1, -524269, 65537, 1, -589805, 65537, 0, -393198, 65537, 2, -458734, 65537, 1, -524270, 65537, 1, -589806, 65537, 0, -393199, 65537, 2, -458735, 65537, 1, -524271, 65537, 1, -589807, 65537, 0, -393200, 65537, 2, -458736, 65537, 1, -524272, 65537, 1, -589808, 65537, 0, -393201, 65537, 2, -458737, 65537, 1, -524273, 65537, 1, -589809, 65537, 0, -131062, 1, 2, -196598, 1, 1, -262134, 1, 1, -327670, 1, 1, -393206, 1, 1, -458742, 1, 1, -524278, 1, 1, -589814, 1, 0, -851961, 131073, 1, -917497, 131073, 1, -983033, 131073, 1, -1048569, 131073, 1, -1114105, 131073, 0, -851962, 65537, 1, -917498, 65537, 1, -983034, 65537, 1, -1048570, 65537, 1, -1114106, 65537, 0, -851963, 65537, 1, -917499, 65537, 1, -983035, 65537, 1, -1048571, 65537, 1, -1114107, 65537, 0, -851964, 1, 1, -917500, 1, 1, -983036, 1, 1, -1048572, 1, 1, -1114108, 1, 0, -655334, 65537, 1, -720870, 65537, 1, -655335, 1, 1, -720871, 1, 1, -655333, 65537, 1, -720869, 65537, 1, -786405, 65537, 1, -851941, 65537, 0, -786406, 65537, 1, -851942, 65537, 0, -786407, 1, 1, -851943, 1, 0, -655330, 65537, 1, -720866, 65537, 1, -786402, 65537, 1, -851938, 65537, 0, -655331, 65537, 1, -720867, 65537, 1, -786403, 65537, 1, -851939, 65537, 0, -655332, 65537, 1, -720868, 65537, 1, -786404, 65537, 1, -851940, 65537, 0, -917484, 131073, 1, -983020, 131073, 1, -1048556, 131073, 0, -917485, 65537, 1, -983021, 65537, 1, -1048557, 65537, 0, -917486, 65537, 1, -983022, 65537, 1, -1048558, 65537, 0, -917487, 65537, 1, -983023, 65537, 1, -1048559, 65537, 0, -917488, 65537, 1, -983024, 65537, 1, -1048560, 1, 65538, -917489, 65537, 1, -983025, 65537, 1, -1048561, 65537, 1, -917490, 65537, 1, -983026, 65537, 1, -1048562, 65537, 1, -1114096, 131073, 1, -1179632, 131073, 1, -1245168, 131073, 1, -1310704, 131073, 1, -1114097, 65537, 1, -1179633, 65537, 1, -1245169, 65537, 1, -1310705, 65537, 1, -1114098, 65537, 1, -1179634, 65537, 1, -1245170, 65537, 1, -1310706, 65537, 1, -1376236, 65537, 2, -1441772, 65537, 1, -1507308, 65537, 0, -1376237, 65537, 2, -1441773, 65537, 1, -1507309, 65537, 0, -1376238, 65537, 2, -1441774, 65537, 1, -1507310, 65537, 0, -1376239, 65537, 2, -1441775, 65537, 1, -1507311, 65537, 0, -1376240, 1, 65536, -1441776, 65537, 1, -1507312, 65537, 0, -1376241, 65537, 1, -1441777, 65537, 1, -1507313, 65537, 0, -1376242, 65537, 1, -1441778, 65537, 1, -1507314, 65537, 0, -1179618, 131073, 2, -1245154, 131073, 1, -1310690, 131073, 1, -1376226, 131073, 1, -1441762, 131073, 1, -1507298, 131073, 0, -1179619, 65537, 2, -1245155, 65537, 1, -1310691, 65537, 1, -1376227, 65537, 1, -1441763, 65537, 1, -1507299, 65537, 0, -1179620, 65537, 2, -1245156, 65537, 1, -1310692, 65537, 1, -1376228, 65537, 1, -1441764, 65537, 1, -1507300, 65537, 0, -1179621, 65537, 2, -1245157, 65537, 1, -1310693, 65537, 1, -1376229, 65537, 1, -1441765, 65537, 1, -1507301, 65537, 0, -1179622, 65537, 2, -1245158, 65537, 1, -1310694, 65537, 1, -1376230, 65537, 1, -1441766, 65537, 1, -1507302, 65537, 0, -1179623, 1, 2, -1245159, 1, 1, -1310695, 1, 1, -1376231, 131073, 65536, -1441767, 65537, 1, -1507303, 65537, 0, -1376232, 65537, 2, -1441768, 65537, 1, -1507304, 65537, 0, -1376233, 65537, 2, -1441769, 65537, 1, -1507305, 65537, 0, -1376234, 65537, 2, -1441770, 65537, 1, -1507306, 65537, 0, -1376235, 65537, 2, -1441771, 65537, 1, -1507307, 65537, 0, -851948, 131073, 2, -851949, 65537, 2, -851950, 65537, 2, -851951, 65537, 2, -851952, 65537, 2, -851953, 65537, 2, -851954, 65537, 2, -851955, 1, 2, -917491, 1, 1, -983027, 1, 1, -1048563, 1, 1, -1114099, 1, 1, -1179635, 1, 1, -1245171, 1, 1, -1310707, 1, 1, -1376243, 1, 1, -1441779, 1, 1, -1507315, 1, 0, 655394, 131073, 2, 589858, 131073, 1, 524322, 131073, 1, 458786, 131073, 1, 393250, 131073, 1, 327714, 131073, 1, 262178, 131073, 1, 196642, 131073, 1, 131106, 131073, 1, 65570, 131073, 1, 34, 131073, 1, -65502, 131073, 1, -131038, 131073, 1, -196574, 131073, 1, -262110, 131073, 1, -327646, 131073, 1, -393182, 131073, 1, -458718, 131073, 1, -524254, 1, 65536, -589790, 65537, 1, -655326, 65537, 1, -720862, 1, 65538, -786398, 131073, 1, -851934, 131073, 0, 655393, 65537, 2, 589857, 65537, 1, 524321, 65537, 1, 458785, 65537, 1, 393249, 65537, 1, 327713, 65537, 1, 262177, 65537, 1, 196641, 65537, 1, 131105, 65537, 1, 65569, 65537, 1, 33, 65537, 1, -65503, 65537, 1, -131039, 65537, 1, -196575, 65537, 1, -262111, 65537, 1, -327647, 65537, 1, -393183, 65537, 1, -458719, 65537, 1, -524255, 65537, 1, -589791, 65537, 1, -655327, 65537, 1, -720863, 65537, 1, -786399, 65537, 1, -851935, 65537, 0, 655392, 65537, 2, 589856, 65537, 1, 524320, 65537, 1, 458784, 65537, 1, 393248, 65537, 1, 327712, 65537, 1, 262176, 65537, 1, 196640, 65537, 1, 131104, 65537, 1, 65568, 65537, 1, 32, 65537, 1, -65504, 65537, 1, -131040, 65537, 1, -196576, 65537, 1, -262112, 65537, 1, -327648, 65537, 1, -393184, 65537, 1, -458720, 65537, 1, -524256, 65537, 1, -589792, 65537, 1, -655328, 65537, 1, -720864, 65537, 1, -786400, 65537, 1, -851936, 65537, 0, 655391, 65537, 2, 589855, 65537, 1, 524319, 65537, 1, 458783, 65537, 1, 393247, 65537, 1, 327711, 65537, 1, 262175, 65537, 1, 196639, 65537, 1, 131103, 65537, 1, 65567, 65537, 1, 31, 65537, 1, -65505, 65537, 1, -131041, 65537, 1, -196577, 65537, 1, -262113, 65537, 1, -327649, 65537, 1, -393185, 65537, 1, -458721, 65537, 1, -524257, 65537, 1, -589793, 65537, 1, -655329, 65537, 1, -720865, 65537, 1, -786401, 65537, 1, -851937, 65537, 0, 131102, 1, 1, 65566, 1, 1, 30, 1, 1, -65506, 1, 1, -131042, 1, 1, -196578, 1, 1, -262114, 1, 1, -327650, 1, 1, -655318, 65537, 1, -720854, 65537, 1, -786390, 65537, 1, -851926, 65537, 1, -655319, 65537, 1, -720855, 65537, 1, -786391, 65537, 1, -851927, 65537, 1, -655320, 65537, 1, -720856, 65537, 1, -786392, 65537, 1, -851928, 65537, 1, -655321, 65537, 1, -720857, 131073, 65538, -786393, 1, 1, -851929, 1, 1, -655322, 65537, 1, -720858, 65537, 0, -655323, 65537, 1, -720859, 65537, 0, -655324, 65537, 1, -720860, 65537, 0, -655325, 65537, 1, -720861, 65537, 0, -589782, 65537, 1, -589783, 65537, 1, -589784, 65537, 1, -589785, 65537, 1, -589786, 65537, 1, -589787, 65537, 1, -589788, 65537, 1, -589789, 65537, 1, -524246, 65537, 2, -524247, 65537, 2, -524248, 65537, 2, -524249, 65537, 2, -524250, 65537, 2, -524251, 65537, 2, -524252, 65537, 2, -524253, 65537, 2, -917462, 65537, 1, -982998, 65537, 0, -917463, 65537, 1, -982999, 65537, 0, -917464, 65537, 1, -983000, 65537, 0, -917465, 1, 1, -983001, 1, 0, -786374, 131073, 1, -851910, 131073, 1, -917446, 131073, 1, -982982, 131073, 0, -786375, 65537, 1, -851911, 65537, 1, -917447, 65537, 1, -982983, 65537, 0, -786376, 65537, 1, -851912, 65537, 1, -917448, 65537, 1, -982984, 65537, 0, -786377, 65537, 1, -851913, 65537, 1, -917449, 65537, 1, -982985, 65537, 0, -786378, 65537, 1, -851914, 65537, 1, -917450, 65537, 1, -982986, 65537, 0, -786379, 65537, 1, -851915, 65537, 1, -917451, 65537, 1, -982987, 65537, 0, -786380, 65537, 1, -851916, 65537, 1, -917452, 65537, 1, -982988, 65537, 0, -786381, 1, 1, -851917, 1, 1, -917453, 1, 1, -982989, 1, 0, -1048511, 131073, 1, -1114047, 131073, 1, -1179583, 131073, 1, -1245119, 131073, 1, -1310655, 131073, 1, -1376191, 131073, 1, -1441727, 131073, 1, -1048512, 65537, 1, -1114048, 65537, 1, -1179584, 65537, 1, -1245120, 65537, 1, -1310656, 65537, 1, -1376192, 65537, 1, -1441728, 65537, 1, -1048513, 65537, 1, -1114049, 65537, 1, -1179585, 65537, 1, -1245121, 65537, 1, -1310657, 65537, 1, -1376193, 65537, 1, -1441729, 65537, 1, -1048514, 65537, 1, -1114050, 65537, 1, -1179586, 65537, 1, -1245122, 65537, 1, -1310658, 65537, 1, -1376194, 65537, 1, -1441730, 65537, 1, -1245126, 131073, 2, -1310662, 131073, 1, -1376198, 131073, 1, -1245127, 65537, 2, -1310663, 65537, 1, -1376199, 65537, 1, -1245128, 65537, 2, -1310664, 65537, 1, -1376200, 65537, 1, -1245129, 65537, 2, -1310665, 65537, 1, -1376201, 65537, 1, -1245130, 65537, 2, -1310666, 65537, 1, -1376202, 65537, 1, -1245131, 65537, 2, -1310667, 65537, 1, -1376203, 65537, 1, -1245132, 65537, 2, -1310668, 65537, 1, -1376204, 65537, 1, -1245133, 1, 2, -1310669, 1, 1, -1376205, 1, 1, -1441734, 131073, 0, -1441735, 65537, 0, -1441736, 65537, 0, -1441737, 65537, 0, -1441738, 65537, 0, -1441739, 65537, 0, -1441740, 65537, 0, -1441741, 1, 0, -1048515, 1, 1, -1114051, 1, 1, -1179587, 1, 1, -1245123, 1, 1, -1310659, 1, 1, -1376195, 1, 1, -1441731, 1, 1, -786367, 131073, 1, -851903, 131073, 1, -917439, 131073, 1, -982975, 131073, 1, -786368, 65537, 1, -851904, 65537, 1, -917440, 65537, 1, -982976, 65537, 1, -786369, 65537, 1, -851905, 65537, 1, -917441, 65537, 1, -982977, 65537, 1, -786370, 65537, 1, -851906, 65537, 1, -917442, 65537, 1, -982978, 65537, 1, -786371, 1, 1, -851907, 1, 1, -917443, 1, 1, -982979, 1, 1, -524230, 65537, 2, -589766, 65537, 1, -655302, 1, 65538, -720838, 131073, 1, -524231, 65537, 2, -589767, 65537, 1, -655303, 65537, 1, -720839, 65537, 1, -524232, 65537, 2, -589768, 65537, 1, -655304, 65537, 1, -720840, 65537, 1, -524233, 65537, 2, -589769, 65537, 1, -655305, 65537, 1, -720841, 65537, 1, -524234, 65537, 2, -589770, 65537, 1, -655306, 65537, 1, -720842, 65537, 1, -524235, 65537, 2, -589771, 65537, 1, -655307, 65537, 1, -720843, 65537, 1, -524236, 65537, 2, -589772, 65537, 1, -655308, 65537, 1, -720844, 65537, 1, -524237, 1, 2, -589773, 1, 1, -655309, 1, 1, -720845, 1, 1, -524223, 131073, 2, -589759, 131073, 1, -655295, 131073, 1, -720831, 131073, 1, -524224, 65537, 2, -589760, 65537, 1, -655296, 65537, 1, -720832, 65537, 1, -524225, 65537, 2, -589761, 65537, 1, -655297, 65537, 1, -720833, 65537, 1, -524226, 65537, 2, -589762, 65537, 1, -655298, 65537, 1, -720834, 65537, 1, -524227, 65537, 2, -589763, 65537, 1, -655299, 131073, 65538, -720835, 1, 1, -524228, 65537, 2, -589764, 65537, 1, -524229, 65537, 2, -589765, 65537, 1, -655300, 65537, 0, -655301, 65537, 0, 458745, 65537, 1, 393209, 65537, 1, 327673, 65537, 1, 262137, 65537, 1, 196601, 65537, 1, 131065, 65537, 1, 65529, 65537, 1, -7, 65537, 1, 458744, 65537, 1, 393208, 65537, 1, 327672, 65537, 1, 262136, 65537, 1, 196600, 65537, 1, 131064, 65537, 1, 65528, 65537, 1, -8, 65537, 1, 458746, 131073, 1, 393210, 131073, 1, 327674, 131073, 1, 262138, 131073, 1, 196602, 131073, 1, 131066, 131073, 1, 65530, 131073, 1, -6, 131073, 1, -1507263, 131073, 1, -1572799, 131073, 1, -1638335, 131073, 0, -1507264, 65537, 1, -1572800, 65537, 1, -1638336, 65537, 0, -1507265, 65537, 1, -1572801, 65537, 1, -1638337, 65537, 0, -1507266, 65537, 1, -1572802, 65537, 1, -1638338, 65537, 0, -1507267, 1, 1, -1572803, 1, 1, -1638339, 1, 0, -524245, 131073, 2, -589781, 131073, 1, -655317, 131073, 1, -720853, 131073, 1, -786389, 131073, 1, -851925, 131073, 1, -917461, 131073, 1, -982997, 131073, 0)

[node name="MultitargetCamera" parent="." instance=ExtResource("3_xwh5x")]
position = Vector2(104, 32)

[node name="RemovablePlatform" parent="." instance=ExtResource("5_lrvf0")]
position = Vector2(608, 480)

[node name="Block" parent="." instance=ExtResource("6_dujk2")]
position = Vector2(608, 400)

[node name="Button" parent="." instance=ExtResource("7_8i2yp")]
position = Vector2(-1104, 32)

[node name="MovablePlatform" parent="." node_paths=PackedStringArray("from", "to") instance=ExtResource("8_3pf27")]
position = Vector2(1272, 96)
from = NodePath("From")
to = NodePath("To")

[node name="From" type="Marker2D" parent="MovablePlatform"]

[node name="To" type="Marker2D" parent="MovablePlatform"]
position = Vector2(264, 0)

[node name="P1Checkpoint1" parent="." instance=ExtResource("9_o812s")]
position = Vector2(992, -568)
player_target = 1

[node name="P2Checkpoint1" parent="." instance=ExtResource("9_o812s")]
position = Vector2(1120, -568)
player_target = 2

[node name="GateButton1" parent="." instance=ExtResource("7_8i2yp")]
position = Vector2(1152, -1056)
player_target = 1

[node name="PlayerGate" parent="." instance=ExtResource("10_qlt0k")]
position = Vector2(1792, -960)
rotation = 1.5708
gate_length = 288.0
player_target = 1

[node name="DeathArea" parent="." instance=ExtResource("11_373na")]
position = Vector2(832, 680)
scale = Vector2(33.8, 1)

[node name="RemovablePlatform2" parent="." instance=ExtResource("5_lrvf0")]
position = Vector2(1488, -1152)

[node name="Block2" parent="." instance=ExtResource("6_dujk2")]
position = Vector2(1552, -1232)

[node name="PlayerGate2" parent="." instance=ExtResource("10_qlt0k")]
position = Vector2(2368, -800)
gate_length = 288.0
player_target = 2

[node name="Button2" parent="." instance=ExtResource("7_8i2yp")]
position = Vector2(2368, -736)

[node name="DeathArea2" parent="." instance=ExtResource("11_373na")]
position = Vector2(4152, -472)
scale = Vector2(146.32, 1)

[node name="Goal" parent="." instance=ExtResource("12_me00f")]
position = Vector2(3392, -1440)
collision_mask = 2
player_target = 1

[node name="Goal2" parent="." instance=ExtResource("12_me00f")]
position = Vector2(3648, -1440)
collision_mask = 4
player_target = 2

[node name="Player1Spawn" type="Marker2D" parent="."]
position = Vector2(40, -24)

[node name="Player2Spawn" type="Marker2D" parent="."]
position = Vector2(176, -24)

[node name="Player1" parent="." node_paths=PackedStringArray("respawn_marker") instance=ExtResource("3_7sd3a")]
position = Vector2(-16, 16)
collision_layer = 2
collision_mask = 41049
player_num = 1
respawn_marker = NodePath("../Player1Spawn")

[node name="Player2" parent="." node_paths=PackedStringArray("respawn_marker") instance=ExtResource("3_7sd3a")]
position = Vector2(200, 16)
collision_layer = 4
collision_mask = 41017
player_num = 2
respawn_marker = NodePath("../Player2Spawn")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="GateButton1" to="." method="_on_gate_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
